Bug 162597 - Editing Data Range in a chart by editing cell number doesn't work in 24.8.0.3
Summary: Editing Data Range in a chart by editing cell number doesn't work in 24.8.0.3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-08-23 13:57 UTC by Dragos
Modified: 2024-09-05 13:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen recording trying to edit a chart (2.74 MB, video/mp4)
2024-08-23 16:44 UTC, Dragos
Details
Calc file containing a chart (18.37 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-08-23 16:47 UTC, Dragos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dragos 2024-08-23 13:57:33 UTC
Description:
Hi, I try to edit Data Range in Calc latest version 24.8.0.3 and doesn't work like in previous version. For example I have a range like this: $Sheet1.$C$3:$E$12. Changing any numer and hitting enter doesn't register, the Data Range remain the same like befor edit. Only thing that works is using the button to the right of the Data Range field and selecting with the mouse.

Steps to Reproduce:
1. Find an existing chart or make a new one.
2. Double click it and then clik left, then choose "Data Ranges".
3. In "Data Range" field edit a letter or a number and hit enter.

Actual Results:
Actual Data Range of the chart doesn't change.

Expected Results:
Data Range should have beenchanged according with the edit we made.


Reproducible: Always


User Profile Reset: No

Additional Info:
Using the button to the right of the Data Range field and selecting with the mouse works to change the Data Range.
Comment 1 Xisco Faulí 2024-08-23 15:49:34 UTC Comment hidden (obsolete)
Comment 2 Xisco Faulí 2024-08-23 15:52:09 UTC Comment hidden (obsolete)
Comment 3 Xisco Faulí 2024-08-23 15:52:19 UTC Comment hidden (obsolete)
Comment 4 Dragos 2024-08-23 16:44:38 UTC
Created attachment 195986 [details]
Screen recording trying to edit a chart

Here is screen recording making a chart from scratch. I will upload the Calc file generated in the process.
Comment 5 Dragos 2024-08-23 16:47:09 UTC
Created attachment 195987 [details]
Calc file containing a chart

This is the Calc file generated, containing a chart made from scratch.
Comment 6 Xisco Faulí 2024-08-23 17:01:53 UTC
Thanks for the detailed report. I can reproduce it now

Regression introduced by

author	codewithvk <vivek.javiya@collabora.com>	2024-02-14 15:15:37 +0530
committer	Tomaž Vajngerl <quikee@gmail.com>	2024-02-16 12:08:55 +0100
commit 4965b055b5998dc345ecaeb80fc8c3874b19e2a5 (patch)
tree 84b9d57e9ef495cb70331d2769baa33e3eb38917
parent 88ba9fab08514b96f458bb8c0ace175b2790638e (diff)
Chart: Make Data Range Dialog Async

Bisected with: bibisect-linux64-24.8
Comment 7 Xisco Faulí 2024-08-23 17:02:10 UTC
@Caolán, I thought you might be interested in this issue
Comment 8 Caolán McNamara 2024-08-23 20:41:35 UTC
what the async conversions missed here is that there was a DataSourceDialog::run with special OK handling in it that doesn't get called when converted to asyncRun
Comment 9 Commit Notification 2024-08-23 22:55:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8843081f91e206b4749b83b186caaceaf1f8c4e3

Resolves: tdf#162597 'ok' in chart range dialog doesn't commit datarange

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2024-08-26 08:35:40 UTC
Verified in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9844a7347608a6bbc85e680a2e222aa106c01db7
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 11 Commit Notification 2024-08-26 08:36:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/dfdeed12b8d1b3fdc026ceccc5cd6007090e74d9

Resolves: tdf#162597 'ok' in chart range dialog doesn't commit datarange

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Dragos 2024-08-28 19:30:47 UTC
I can confirm that the issue is solved for me in:
Version: 24.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: fee42049da6b1cf4c7f25eccd256e307cdbcdcbf
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Thanks a lot!
Comment 13 Commit Notification 2024-09-05 13:39:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/44407574973c642380d433f1541d1318f04ba72c

Resolves: tdf#162597 'ok' in chart range dialog doesn't commit datarange

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.